test/files/neg/pickle-java-crash.check
Crash.java:4: error: not found: type NotThere
    NotThere notThere();
    ^
one error found
